# cherryfold

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
assets/: demo.jsonl  demo.tape
cherryfold/: __init__.py  app.py  cli.py  config.py  launcher.py  parser.py
